test/vm/errors/parser/export_list_empty.ach
// Parser error: empty export list
// Expected: parse error "empty export list"

export { }
